# actor-x1

./: CLAUDE.md  Cargo.toml  README.md
crates/actor-x1/: Cargo.toml  README.md
crates/actor-x1/benches/: goal1-crit.rs  goal2-crit.rs  goalzc-crit.rs
crates/actor-x1/src/: actor_manager.rs  lib.rs  pool.rs  runtime.rs  runtime_zc.rs
crates/actor-x1/src/perf/: band_table.rs
crates/tprobe/: Cargo.toml  README.md
crates/tprobe/notes/: design.md  overhead-model.md  precision.md
crates/tprobe/src/: band_table.rs  fmt.rs  lib.rs  overhead.rs  tprobe.rs  tprobe2.rs
notes/: README.md  acronyms-terms.md  chores-01.md  chores-02.md  chores-03.md  design.md  todo.md
src/: lib.rs  runtime.rs
src/perf/: band_table.rs  mod.rs  overhead.rs  pin.rs  ticks.rs  tprobe2.rs
src/perf/ticks/: x86_64.rs
