[package]
name = "actor-x1"
version = "0.3.0"
edition = "2024"
description = "An experiment in the actor model in Rust (Communicating Sequential Processes, Hoare 1978)."
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
tprobe = { path = "../tprobe" }
